<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.stoffe.ibs2.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_fragment_pain"
            app:destination="@id/navigation_fragment_pain"
            app:enterAnim="@anim/slide_left"
            app:exitAnim="@anim/wait_anim"
            app:popEnterAnim="@anim/wait_anim"
            app:popExitAnim="@anim/slide_right"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.stoffe.ibs2.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.stoffe.ibs2.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_specific_day2"
            app:destination="@id/navigation_specific_day"
            app:enterAnim="@anim/slide_left"
            app:exitAnim="@anim/wait_anim"
            app:popEnterAnim="@anim/wait_anim"
            app:popExitAnim="@anim/slide_right"
            app:popUpTo="@+id/navigation_fragment_pain"
            app:popUpToInclusive="true"/>
    </fragment>


    <fragment
        android:id="@+id/navigation_fragment_pain"
        android:name="com.stoffe.ibs2.ui.register.steps.PainFragment"
        android:label="@string/pain_titel"
        tools:layout="@layout/fragment_pain" >
        <action
            android:id="@+id/action_navigation_fragment_pain_to_navigation_fragment_toilet"
            app:destination="@id/navigation_fragment_toilet"
            app:enterAnim="@anim/slide_left"
            app:exitAnim="@anim/wait_anim"
            app:popEnterAnim="@anim/wait_anim"
            app:popExitAnim="@anim/slide_right"
            app:popUpTo="@+id/navigation_fragment_pain"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/navigation_fragment_toilet"
        android:name="com.stoffe.ibs2.ui.register.steps.ToiletFragment"
        android:label="@string/pain_titel"
        tools:layout="@layout/fragment_pain" >
        <action
            android:id="@+id/action_navigation_fragment_toilet_to_navigation_fragment_stool"
            app:destination="@id/navigation_fragment_stool"
            app:enterAnim="@anim/slide_left"
            app:exitAnim="@anim/wait_anim"
            app:popEnterAnim="@anim/wait_anim"
            app:popExitAnim="@anim/slide_right"
            app:popUpTo="@+id/navigation_fragment_pain"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/navigation_fragment_stool"
        android:name="com.stoffe.ibs2.ui.register.steps.StoolFragment"
        android:label="@string/pain_titel"
        tools:layout="@layout/fragment_pain" >
        <action
            android:id="@+id/action_navigation_fragment_stool_to_navigation_fragment_exercise"
            app:destination="@id/navigation_fragment_exercise"
            app:enterAnim="@anim/slide_left"
            app:exitAnim="@anim/wait_anim"
            app:popEnterAnim="@anim/wait_anim"
            app:popExitAnim="@anim/slide_right"
            app:popUpTo="@+id/navigation_fragment_pain"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/navigation_fragment_exercise"
        android:name="com.stoffe.ibs2.ui.register.steps.ExerciseFragment"
        android:label="@string/promenad_titel"
        tools:layout="@layout/fragment_pain" >
        <action
            android:id="@+id/action_navigation_fragment_exercise_to_navigation_fragment_food"
            app:destination="@id/navigation_fragment_food"
            app:enterAnim="@anim/slide_left"
            app:exitAnim="@anim/wait_anim"
            app:popEnterAnim="@anim/wait_anim"
            app:popExitAnim="@anim/slide_right"
            app:popUpTo="@+id/navigation_fragment_pain"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_fragment_food"
        android:name="com.stoffe.ibs2.ui.register.steps.FoodFragment"
        android:label="@string/food_titel"
        tools:layout="@layout/fragment_pain" >
        <action
            android:id="@+id/action_navigation_fragment_food_to_navigation_home"
            app:destination="@id/navigation_home"
            app:enterAnim="@anim/slide_left"
            app:exitAnim="@anim/wait_anim"
            app:popEnterAnim="@anim/wait_anim"
            app:popExitAnim="@anim/slide_right"
            app:popUpTo="@+id/navigation_fragment_pain"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_specific_day"
        android:name="com.stoffe.ibs2.ui.notifications.SpecificDayFragment"
        android:label="specific_day"
        tools:layout="@layout/fragmnet_specific_day">
    </fragment>
</navigation>