<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="title"
            type="String" />

        <variable
            name="question"
            type="String" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryLightColor"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp" />
        <TextView
            android:id="@+id/text_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:text="@{question}"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textview_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_food"
            android:textColor="#000000"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/playerField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:hint="@string/example_food"
            android:inputType="text"
            android:padding="10dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:listSelector="@android:color/transparent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <com.google.android.material.button.MaterialButton
            android:backgroundTint="#f8b342"
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginHorizontal="50dp"
            android:text="@string/register_day"/>

    </LinearLayout>

</layout>